--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <label for="email">
               <img src="/images/icon-error.svg" alt="">
             </label>
-            <button class="seta" type="submit"><img src="/images/icon-arrow.svg" alt=""></button>
+            <button type="submit"><img src="/images/icon-arrow.svg" alt=""></button>
           </div>
           <p class="error">Please provide a valid email.</p>
 
@@ -62,7 +62,7 @@
 
     </div>
 
-    <div class="img-desktop">
+    <div class="img-desktopStructure">
       <picture>
         <source class="img-mobile" media="(max-width:768px)" srcset="/images/hero-mobile.jpg">
         <img class="img-desktop" src="/images/hero-desktop.jpg" alt="">
